--- a/package.json
+++ b/package.json
@@ -13,27 +13,32 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.x.x",
+    "@aws-sdk/s3-request-presigner": "^3.x.x",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^5.0.0-beta.1",
     "jsonwebtoken": "^9.0.2",
+    "mime-types": "^2.1.35",
     "mongoose": "^8.6.3",
     "typescript": "^5.6.2",
     "uuid": "^10.0.0",
-    "yup": "^1.4.0",
-    "cors": "^2.8.5"
+    "yup": "^1.4.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.17",
-    "@types/mongoose": "^5.11.97",
-    "@types/node": "^22.5.5",
-    "@types/yup": "^0.32.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.13",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/mime-types": "^2.1.1",
+    "@types/mongoose": "^5.11.97",
+    "@types/node": "^22.5.5",
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^10.0.0",
+    "@types/yup": "^0.32.0",
+    "aws-sdk-client-mock": "^4.1.0",
     "jest": "^29.7.0",
     "mongodb-memory-server": "^10.0.0",
     "nodemon": "^3.1.6",
