--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "mongoose": "^8.6.3",
     "typescript": "^5.6.2",
     "uuid": "^10.0.0",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -43,7 +44,6 @@
     "mongodb-memory-server": "^10.0.0",
     "nodemon": "^3.1.6",
     "supertest": "^7.0.0",
-    "ts-jest": "^29.2.5",
-    "ts-node": "^10.9.2"
+    "ts-jest": "^29.2.5"
   }
 }
