--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "start": "ts-node packages/server/index.ts",
+    "start": "node dist/packages/server/index.js",
     "dev": "nodemon --exec ts-node packages/server/index.ts",
     "build": "tsc",
     "test": "jest"
@@ -24,8 +24,7 @@
     "mongoose": "^8.6.3",
     "typescript": "^5.6.2",
     "uuid": "^10.0.0",
-    "yup": "^1.4.0",
-    "ts-node": "^10.9.2"
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -44,6 +43,7 @@
     "mongodb-memory-server": "^10.0.0",
     "nodemon": "^3.1.6",
     "supertest": "^7.0.0",
-    "ts-jest": "^29.2.5"
+    "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2"
   }
 }
